# bvpm

./: .gitignore  CMakeLists.txt  DependencyEngine.cpp  InstallEngine.cpp  LocalFolderRepository.cpp  PackageFile.cpp  README.md  RepositoryEngine.cpp  UninstallEngine.cpp  afterinstall.sh  config.cpp  create-busybox-package.sh  main.cpp  manifest  manifest-nodep  owned-files  refresh_fakeroot.sh
busybox-package/: afterinstall.sh  manifest  owned-files
include/: DependencyEngine.h  InstallEngine.h  LocalFolderRepository.h  PackageFile.h  Repository.h  RepositoryEngine.h  UninstallEngine.h  args.hxx  config.h  debug.h  flags.h  human-readable.h
